<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.bytebuilding.betmanager.tabs.MoneysFragment">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:padding="@dimen/padding"
        android:text="@string/total_betted_moneys"
        android:textSize="@dimen/fontSize_small" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/textView9"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/textView9"
        android:layout_below="@+id/textView5"
        android:padding="@dimen/padding"
        android:text="@string/total_lost_moneys"
        android:textSize="@dimen/fontSize_small" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/textView5"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/textView5"
        android:layout_below="@+id/textView6"
        android:padding="@dimen/padding"
        android:text="@string/total_profit"
        android:textSize="@dimen/fontSize_small" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/textView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/textView"
        android:layout_below="@+id/textView"
        android:padding="@dimen/padding"
        android:text="@string/total_won_moneys"
        android:textSize="@dimen/fontSize_small" />

    <TextView
        android:id="@+id/lbl_total_lost_moneys"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView9"
        android:layout_below="@+id/textView5"
        android:layout_toEndOf="@+id/textView6"
        android:layout_toRightOf="@+id/textView6"
        android:padding="@dimen/padding"
        android:textSize="@dimen/fontSize_small" />

    <TextView
        android:id="@+id/lbl_total_won_moneys"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView5"
        android:layout_below="@+id/textView"
        android:layout_toEndOf="@+id/textView5"
        android:layout_toRightOf="@+id/textView5"
        android:padding="@dimen/padding"
        android:textSize="@dimen/fontSize_small" />

    <TextView
        android:id="@+id/lbl_total_betted_moneys"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/textView"
        android:layout_toRightOf="@+id/textView"
        android:padding="@dimen/padding"
        android:textSize="@dimen/fontSize_small" />

    <TextView
        android:id="@+id/lbl_total_profit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView9"
        android:layout_below="@+id/lbl_total_lost_moneys"
        android:layout_toEndOf="@+id/textView6"
        android:layout_toRightOf="@+id/textView6"
        android:padding="@dimen/padding"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/fontSize_small" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/lbl_total_won_moneys"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/lbl_total_betted_moneys"
        android:layout_toRightOf="@+id/lbl_total_betted_moneys"
        android:padding="@dimen/padding"
        android:text="@string/rub"
        android:textSize="@dimen/fontSize_small" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/lbl_total_lost_moneys"
        android:layout_below="@+id/lbl_total_betted_moneys"
        android:layout_toEndOf="@+id/lbl_total_won_moneys"
        android:layout_toRightOf="@+id/lbl_total_won_moneys"
        android:padding="@dimen/padding"
        android:text="@string/rub"
        android:textSize="@dimen/fontSize_small" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/lbl_total_profit"
        android:layout_below="@+id/textView17"
        android:layout_toEndOf="@+id/lbl_total_lost_moneys"
        android:layout_toRightOf="@+id/lbl_total_lost_moneys"
        android:padding="@dimen/padding"
        android:text="@string/rub"
        android:textSize="@dimen/fontSize_small" />

    <TextView
        android:id="@+id/textView19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/lbl_total_profit"
        android:layout_below="@+id/textView18"
        android:layout_toEndOf="@+id/lbl_total_profit"
        android:layout_toRightOf="@+id/lbl_total_profit"
        android:padding="@dimen/padding"
        android:text="@string/rub"
        android:textSize="@dimen/fontSize_small" />

    <TextView

        android:id="@+id/textView20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:padding="@dimen/padding"
        android:text="@string/good_luck"
        android:textSize="@dimen/fontSize_big" />
</RelativeLayout>
