<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/padding">

    <android.support.v7.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_gravity="center"
        android:background="@color/cardview_light_background"
        app:cardCornerRadius="@dimen/cardCornerRadius"
        app:cardElevation="@dimen/card_elevation"
        app:cardUseCompatPadding="true">

        <RelativeLayout
            android:id="@+id/cardView_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/cardview_light_background">

            <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/profile_image"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:padding="@dimen/padding"
                android:src="@mipmap/card_view_icon" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/textView2"
                android:layout_alignParentTop="true"
                android:layout_toRightOf="@+id/profile_image"
                android:padding="@dimen/padding"
                android:text="@string/card_title"
                android:textSize="@dimen/fontSize_big" />

            <CheckBox
                android:id="@+id/chb_isDone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/textView3"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:clickable="true"
                android:padding="@dimen/padding"
                android:text="@string/isDone"
                android:textSize="@dimen/fontSize_small" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/profile_image"
                android:padding="@dimen/padding"
                android:text="@string/kind_of_sport"
                android:textSize="@dimen/fontSize_small" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/textView2"
                android:padding="@dimen/padding"
                android:text="@string/moneys_bet"
                android:textSize="@dimen/fontSize_small" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/lbl_moneys_bet"
                android:layout_alignBottom="@+id/lbl_moneys_bet"
                android:layout_toEndOf="@+id/lbl_moneys_bet"
                android:layout_toRightOf="@+id/lbl_moneys_bet"
                android:padding="@dimen/padding"
                android:text="@string/rub"
                android:textSize="@dimen/fontSize_small" />

            <TextView
                android:id="@+id/lbl_moneys_bet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/textView4"
                android:layout_toEndOf="@+id/textView4"
                android:layout_toRightOf="@+id/textView4"
                android:padding="@dimen/padding"
                android:textSize="@dimen/fontSize_small" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/textView4"
                android:padding="@dimen/padding"
                android:text="@string/coefficient"
                android:textSize="@dimen/fontSize_small" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/textView8"
                android:layout_toLeftOf="@+id/lbl_coefficient"
                android:layout_toStartOf="@+id/lbl_coefficient"
                android:padding="@dimen/padding"
                android:text="@string/possible_profit"
                android:textSize="@dimen/fontSize_small" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/lbl_possible_profit"
                android:layout_toEndOf="@+id/lbl_possible_profit"
                android:layout_toRightOf="@+id/lbl_possible_profit"
                android:padding="@dimen/padding"
                android:text="@string/rub"
                android:textSize="@dimen/fontSize_small" />

            <TextView
                android:id="@+id/lbl_sport_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView3"
                android:layout_toEndOf="@+id/textView2"
                android:layout_toRightOf="@+id/textView2"
                android:padding="@dimen/padding"
                android:textSize="@dimen/fontSize_small" />

            <TextView
                android:id="@+id/lbl_coefficient"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView4"
                android:layout_toEndOf="@+id/textView8"
                android:layout_toRightOf="@+id/textView8"
                android:padding="@dimen/padding"
                android:textSize="@dimen/fontSize_small" />

            <TextView
                android:id="@+id/lbl_possible_profit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/textView10"
                android:layout_toEndOf="@+id/textView10"
                android:layout_toRightOf="@+id/textView10"
                android:padding="@dimen/padding"
                android:textSize="@dimen/fontSize_small" />

        </RelativeLayout>

    </android.support.v7.widget.CardView>

</RelativeLayout>